--- a/frontend-coding-challenge/src/app/views/repository-list/repository-list.component.css
+++ b/frontend-coding-challenge/src/app/views/repository-list/repository-list.component.css
@@ -43,7 +43,11 @@
 }
 
 .search-bar {
-  width: 90%;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-top: 5px;
 }
 
 .search-bar input {
@@ -55,16 +59,14 @@
   border: 2px solid black;
   border-radius: 4px;
   line-height: 1;
-  width: 100%;
+  width: 80%;
   height: 2.25rem;
 }
 
 .no-data{
   font-family: 'Balsamiq Sans';
   font-size: 15;
-  position: fixed;
-  top: 50%;
-  left: 47%;
+
 }
 
 .loader {
@@ -72,13 +74,11 @@
   border-radius: 50%;
   border-top: 16px solid rgb(228, 221, 221);
   border-bottom: 16px solid rgb(228, 221, 221);
-  width: 80px;
-  height: 80px;
+  width: 30px;
+  height: 30px;
   -webkit-animation: spin 2s linear infinite;
   animation: spin 2s linear infinite;
-  position: fixed;
-  top: 50%;
-  left: 48%;
+
 }
 
 @-webkit-keyframes spin {
@@ -91,4 +91,17 @@
   100% { transform: rotate(360deg); }
 }
 
+.state-info{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  top: 20%;
 
+}
+
+
+@media screen and (max-width:830px){
+
+}
