--- a/src/app/views/repository-item/repository-item.component.html
+++ b/src/app/views/repository-item/repository-item.component.html
@@ -10,7 +10,7 @@
         <span class="nbstars">Stars: {{ repoItem.nbStars | kformater }}</span>
         <span class="nb-issues">Issues: {{ repoItem.nbIssues | kformater }}</span>
       </div>
-      <span class="time-interval">Submittes  {{ repoItem.timeInterval }} days ago by {{ repoItem.repoName }} </span>
+      <span class="time-interval">Submitted {{ repoItem.timeInterval }} days ago by {{ repoItem.repoName }} </span>
     </div>
   </div>
 
